# Timey

./: CMakeLists.txt  README.md  example.c
cmake/: TimeyConfig.cmake.in  timey_config.cmake.in
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  navtreedata.js  navtreeindex0.js
docs/html/d6/d05/: structtimey__raw__time-members.html
docs/html/d6/d2b/: structtimey__raw__time.html  structtimey__raw__time.js
docs/html/d6/d3a/: structtimey__timestamp-members.html
docs/html/d8/d05/: timey_8h.html  timey_8h.js  timey_8h_source.html
docs/html/d9/d9f/: structtimey__datetime-members.html
docs/html/da/db9/: structtimey__datetime.html  structtimey__datetime.js
docs/html/de/de6/: structtimey__timestamp.html  structtimey__timestamp.js
docs/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  classes_0.js  defines_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_7.js
include/: timey.h
src/: timey.c
